# box_nak_panel

./: README.md  db.sqlite3  pyproject.toml
panel_admin/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
panel_admin/templates/: crear_producto.html  home.html  index.html  lista_productos.html  productos_gracias.html
